Revert "Merge branch 'feature/hints' into feauture/hints/script"
This reverts commit 960bbbcc13d7039f3ba1249b3146cbf8a3ede97b, reversing
changes made to 0495a503d577b20482913923912fb5fdbfa6a7bc.