@@ -15,22 +15,8 @@
         <geotools.version>28.2</geotools.version>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-        <javafx.version>21</javafx.version>
-        <mockito.version>5.11.0</mockito.version>
+        <javafx.version>19</javafx.version>
     </properties>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.junit</groupId>
-                <artifactId>junit-bom</artifactId>
-                <version>${junit.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-
 
     <dependencies>
         <!-- JavaFX Dependencies -->
@@ -38,11 +24,6 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
             <version>${javafx.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.xerial</groupId>
-            <artifactId>sqlite-jdbc</artifactId>
-            <version>3.46.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
@@ -103,38 +84,19 @@
             <version>3.45.2.0</version>
         </dependency>
 
-        <!-- Unit test dependencioes-->
+        <!-- Test dependencies -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.testfx</groupId>
-            <artifactId>testfx-core</artifactId>
-            <version>4.0.17</version>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.testfx</groupId>
-            <artifactId>testfx-junit5</artifactId>
-            <version>4.0.17</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>${mockito.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-junit-jupiter</artifactId>
-            <version>${mockito.version}</version>
-            <scope>test</scope>
-        </dependency>
-
-
     </dependencies>
 
     <repositories>
@@ -146,8 +108,6 @@
             <releases><enabled>true</enabled></releases>
         </repository>
     </repositories>
-
-
 
     <build>
         <plugins>
@@ -166,9 +126,11 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>com.example.geofarer.GeofarerApp</mainClass>
+                    <commandlineArgs>--add-modules ALL-MODULE-PATH</commandlineArgs>
                 </configuration>
                 <executions>
                     <execution>
+                        <id>default-cli</id>
                         <configuration>
                             <mainClass>com.example.geofarer.GeofarerApp</mainClass>
                         </configuration>
@@ -178,7 +140,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.2.5</version>
+                <version>3.1.2</version>
             </plugin>
         </plugins>
     </build>
